// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPrettierEslintOptions returns all prettier-eslint options 1`] = `
Object {
  "prettierLast": true,
}
`;

exports[`getPrettierOptions returns all prettier options 1`] = `
Object {
  "bracketSpacing": true,
  "jsxBracketSameLine": true,
  "parser": "flow",
  "printWidth": 80,
  "semi": true,
  "singleQuote": true,
  "tabWidth": 2,
  "trailingComma": true,
  "useTabs": true,
}
`;

exports[`getPrettierOptions uses the editorconfig options if provided 1`] = `
Object {
  "bracketSpacing": true,
  "jsxBracketSameLine": true,
  "parser": "flow",
  "printWidth": 100,
  "semi": true,
  "singleQuote": true,
  "tabWidth": 4,
  "trailingComma": true,
  "useTabs": false,
}
`;
